--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
     <div class="card card-container">
-        <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" />
+        <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" width="50%" height="50%" />
         <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
             <div class="form-group">
                 <label for="username">Username</label>
@@ -30,8 +30,8 @@
                 </div>
             </div>
         </form>
-        <div class="alert alert-success" *ngIf="isLoggedIn">
+        <!-- <div class="alert alert-success" *ngIf="isLoggedIn">
             Logged in as {{ roles }}.
-        </div>
+        </div> -->
     </div>
 </div>
