--- a/src/app/components/board-user/board-user.component.html
+++ b/src/app/components/board-user/board-user.component.html
@@ -13,7 +13,7 @@
 <div *ngIf="isError == true" class="container">
 
     <header class="jumbotron">
-        {{errorWrite}}
+        {{errorMessage}}
     </header>
 
 
