--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <header class="jumbotron">
-        <p>{{ content }}</p>
-    </header>
+  <header class="jumbotron">
+    <p>{{ content }}</p>
+
+    Hello,
+
+    Welcome on my Application where you can manage history of your car
+
+  </header>
 </div>
