--- a/src/app/components/cars/car-add/car-add.component.html
+++ b/src/app/components/cars/car-add/car-add.component.html
@@ -1,1 +1,32 @@
-<p>car-add works!</p>
+<div>
+  <div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="model">Model</label>
+        <input
+          type="text"
+          class="form-control"
+          id="model"
+          required
+          [(ngModel)]="car.model"
+          name="model"
+        />
+      </div>
+      <div class="form-group">
+        <label for="engine">Engine</label>
+        <input
+          class="form-control"
+          id="engine"
+          required
+          [(ngModel)]="car.engine"
+          name="engine"
+        />
+      </div>
+      <button (click)="saveCar()" class="btn btn-success">Submit</button>
+    </div>
+    <div *ngIf="submitted">
+      <h4>Tutorial was submitted successfully!</h4>
+      <button class="btn btn-success" (click)="newCar()">Add new car</button>
+    </div>
+  </div>
+</div>
